--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,12 @@ services:
     environment:
       RABBITMQ_URL: "amqp://guest:guest@rabbitmq:5672/"
       QUEUE_NAME: "mortgage"
-      POSTGRES_CONNECTION: "Host=postgres;Port=5432;Database=buy_my_house;Username=postgres;Password=example"
+      PG_HOST: "postgres"
+      PG_PORT: "5432"
+      PG_DATABASE: "buy_my_house"
+      PG_USER: "postgres"
+      PG_PASSWORD: "example"
+      PG_SSL: "false"
 volumes:
   pgdata:
     
