--- a/AzureFunctions/package.json
+++ b/AzureFunctions/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@azure/storage-blob": "^12.30.0",
+    "@types/pdfkit": "^0.17.4",
     "@types/pg": "^8.16.0",
+    "pdfkit": "^0.17.2",
     "pg": "^8.17.2",
     "rabbitmq-client": "^5.0.8"
   },
